code button crop according to ratio square, 4/3, 16/9

--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,8 @@
     <title>Edit Image Demo</title>
 </head>
 <body>
-   <img class="image-view" id="image-view" src="https://znews-photo.zadn.vn/w660/Uploaded/mdf_drkydd/2019_08_10/0.jpg">
+   <!-- <img class="image-view" id="image-view" src="./img/baner.jpg"> -->
+    <div id="image-view" class="image-view"><h1 style="">Click to me </h1></div>
 </body>
 <script>
 
